fix: z-index of navibar

--- a/src/app/navibar/navibar.component.css
+++ b/src/app/navibar/navibar.component.css
@@ -12,7 +12,7 @@
   align-items: flex-start;
   padding: 10px 20px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+  z-index: 100;
   box-sizing: border-box;
   border-bottom: solid var(--color-foam);
   margin-top: 1px;
